# github-tui

./: CMakeLists.txt  LICENSE  README.md
src/: config.cpp  config.h  github_client.cpp  github_client.h  main.cpp
src/ui/: app.cpp  app.h
